--- a/appDev/app6K/app/style/app_components/_workers-dev.scss
+++ b/appDev/app6K/app/style/app_components/_workers-dev.scss
@@ -79,8 +79,8 @@ $z-index-shadowOverlay:              2;
 $margin-def:  $margin-def;
 $margin-less: $margin-less;
 .title {
-    margin-top:    $margin-less - $margin-def ;
-    margin-bottom: $margin-less - $margin-def ;
+    //margin-top:    $margin-less - $margin-def ;
+    //margin-bottom: $margin-less - $margin-def ;
 }
 .toolbar {
     background-color: pink;
