--- a/appDev/app6K/app/style/app_core/01-setup.scss
+++ b/appDev/app6K/app/style/app_core/01-setup.scss
@@ -1,5 +1,5 @@
-/* Required settings   */
-/* app6002, 2018.11.23 */
+/* Required settings app6002  */
+/* 2018.12.5 */
 
 // ------------------------------------ padding system
 
@@ -8,7 +8,6 @@ $margin-min:  1*$dim;
 $margin-def:  3*$dim;
 $margin-less: 2*$dim;
 $margin-half: $margin-def / 2;
-
 
 // ------------------------------------ colors
 
