--- a/appDev/app6K/app/style/app.css
+++ b/appDev/app6K/app/style/app.css
@@ -1,12 +1,12 @@
 /* app scss constructor - mixins and templates*/
-/* 2018.11.27 */
+/* 2018.12.5 */
 /* EOF: app scss constructor */
-/* Required settings   */
-/* app6002, 2018.11.23 */
+/* Required settings app6002  */
+/* 2018.12.5 */
 /* ------------------------------------ screen sizes */
 /* EOF: Required settings */
 /* html base css 1004 */
-/* 2018.11.27 */
+/* 2018.12.5 */
 /* ------------------------------------ required box model */
 *, *:before, *:after {
   box-sizing: inherit; }
@@ -58,6 +58,10 @@ template, [hidden] {
 
 summary {
   display: list-item; }
+
+ul, ol {
+  padding-left: 0;
+  margin-left: 2rem; }
 
 nav ul, nav ol {
   padding: 0;
@@ -134,10 +138,6 @@ abbr[title] {
 /* ------------------------------------ end of html base */
 /* ------------------------------------ system colors */
 /**/
-.title {
-  margin-top: -0.8rem;
-  margin-bottom: -0.8rem; }
-
 .toolbar {
   background-color: pink;
   float: right; }
@@ -170,7 +170,7 @@ abbr[title] {
   background-color: rgba(14, 20, 47, 0.7);
   color: white; }
 
-.welcome-item .block:not(:last-child), .welcome-links .block:not(:last-child), .welcome-form .block:not(:last-child), .welcome-item .box:not(:last-child), .welcome-links .box:not(:last-child), .welcome-form .box:not(:last-child) {
+.welcome-item .block:not(:last-child), .welcome-links .block:not(:last-child), .welcome-form .block:not(:last-child) {
   margin-bottom: 2.4rem; }
 
 .welcome-links {
@@ -381,6 +381,11 @@ abbr[title] {
 /* ==============================================================
  # used by components
 ============================================================== */
+.box {
+  padding-top: 2.4rem;
+  padding-bottom: 2.4rem; }
+
+/**/
 .kliker {
   -webkit-user-select: none;
   /* Chrome all / Safari all */
@@ -427,9 +432,9 @@ button {
   padding: 0.25em 1em; }
 
 /**/
-.has-shadow-overlay, .has-active-sidebar {
+.has-shadow-overlay {
   overflow: hidden; }
-  .has-shadow-overlay .screen-shadow-overlay, .has-active-sidebar .screen-shadow-overlay {
+  .has-shadow-overlay .screen-shadow-overlay {
     opacity: 0.8;
     pointer-events: auto; }
 
@@ -446,7 +451,10 @@ button {
 
 /**/
 /* EOF: workers */
-/* ------------------------------------ body box model */
+/* ==============================================================
+ # box model for HTML & BODY
+============================================================== */
+/* ------------------------------------ required */
 .body-wrap {
   min-height: 100%;
   margin-top: 0;
@@ -455,27 +463,17 @@ button {
   flex-direction: column; }
 
 .body-wrap-header {
+  background-color: white;
   position: sticky;
-  top: 0;
-  background-color: white; }
+  top: 0; }
 
 .body-wrap-footer {
   margin-top: auto; }
 
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  html.has-body-wrap {
-    display: flex;
-    flex-direction: column; } }
-
 /* */
-/*
-    app grid system
-    v2018.11.23
-*/
-* {
-  grid-column: main; }
-
-.layout-for-markup, .block, .box, .grid-leftside, .grid-rightside, .layout-for-article, .use-grid, .layer {
+/* grid for article layout (main+aside+extra) */
+/* 2018.12.5 */
+.grid-for-markup, .block, .left-wrap-in-grid, .right-wrap-in-grid, .grid-for-article, .grid {
   display: grid;
   grid-auto-rows: min-content;
   grid-auto-flow: row;
@@ -483,92 +481,121 @@ button {
   align-items: start;
   grid-gap: 1.6rem 0; }
 
-.layout-for-markup, .block, .box, .grid-leftside, .grid-rightside {
+.grid-for-markup, .block, .left-wrap-in-grid, .right-wrap-in-grid {
   grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ; }
 
-.layout-for-article, .use-grid, .layer {
-  grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ; }
-  @media (min-width: 901px) {
-    .layout-for-article, .use-grid, .layer {
-      grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  26rem  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ; } }
+@media (max-width: 900px) {
+  .grid-for-article, .grid {
+    grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ; } }
+@media (min-width: 901px) {
+  .grid-for-article, .grid {
+    grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  26rem  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ; } }
 
-.use-grid, .layer {
+.grid-for-markup > * {
+  grid-column: main;
+  margin-top: 0;
+  margin-bottom: 0; }
+.grid-for-markup > .layer {
   grid-column: full; }
+.grid-for-markup > .block {
+  grid-column: overmain; }
+.grid-for-markup > .aside {
+  grid-column: aside; }
+.grid-for-markup > .merge {
+  grid-column: merge; }
 
-.break-grid {
+.grid-for-article > * {
+  grid-column: main;
+  margin-top: 0;
+  margin-bottom: 0; }
+.grid-for-article > .layer {
   grid-column: full; }
-  .break-grid * {
+.grid-for-article > .block {
+  grid-column: overmain; }
+.grid-for-article > .aside {
+  grid-column: aside; }
+.grid-for-article > .merge {
+  grid-column: merge; }
+
+.grid > * {
+  grid-column: main;
+  margin-top: 0;
+  margin-bottom: 0; }
+.grid > .layer {
+  grid-column: full; }
+.grid > .block {
+  grid-column: overmain; }
+.grid > .aside {
+  grid-column: aside; }
+.grid > .merge {
+  grid-column: merge; }
+
+.block > * {
+  grid-column: main;
+  margin-top: 0;
+  margin-bottom: 0; }
+.block > .layer {
+  grid-column: full; }
+.block > .block {
+  grid-column: overmain; }
+.block > .aside {
+  grid-column: aside; }
+.block > .merge {
+  grid-column: merge; }
+
+.left-wrap-in-grid {
+  grid-column: full-start / overmain-end; }
+  .left-wrap-in-grid > * {
+    grid-column: main;
+    margin-top: 0;
+    margin-bottom: 0; }
+  .left-wrap-in-grid > .layer {
+    grid-column: full; }
+  .left-wrap-in-grid > .block {
+    grid-column: overmain; }
+  .left-wrap-in-grid > .aside {
+    grid-column: aside; }
+  .left-wrap-in-grid > .merge {
+    grid-column: merge; }
+
+.right-wrap-in-grid {
+  grid-column: overmain-start / full-end; }
+  .right-wrap-in-grid > * {
+    grid-column: main;
+    margin-top: 0;
+    margin-bottom: 0; }
+  .right-wrap-in-grid > .layer {
+    grid-column: full; }
+  .right-wrap-in-grid > .block {
+    grid-column: overmain; }
+  .right-wrap-in-grid > .aside {
+    grid-column: aside; }
+  .right-wrap-in-grid > .merge {
+    grid-column: merge; }
+
+/**/
+.has-two-columns {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 2.4rem; }
+  .has-two-columns > * {
     grid-column: auto; }
 
-.grid-leftside {
-  grid-column: full-start / overmain-end; }
-  @media (min-width: 901px) {
-    .grid-leftside {
-      grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start aside-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [full-end merge-end overmain-end aside-end] ; } }
+.has-two-columns > .block {
+  grid-column: auto; }
 
-.grid-rightside {
-  grid-column: overmain-start / full-end; }
-  @media (min-width: 901px) {
-    .grid-rightside {
-      grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 64rem)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  26rem  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ; } }
+/**/
+/* eof grid for article */
+/* split fullscreen into parts header/body/footer */
+/* 2018.12.5
+```html template
 
-.layer {
-  padding-top: 2.4rem;
-  padding-bottom: 2.4rem; }
-
-.block, .box {
-  grid-column: overmain; }
-
-.box {
-  padding-top: 2.4rem;
-  padding-bottom: 2.4rem; }
-
-/*
-.layer {
-    grid-column: full;
-}
-.layer-row {
-    @extend %grid_layout--base;
-    grid-template-columns: inherit;
-    grid-column: full;
-}
-.layer-block {
-    @extend %grid_layout-for-markup;
-    grid-column: full;
-}
-
-.block {
-    @extend %grid_layout-for-markup;
-    grid-column: overmain;
-}
-.block-row {
-    @extend %grid_layout-for-markup;
-    grid-column: merge;
-}
-.block-left {
-    @extend %grid_layout-for-markup;
-    @media ($screenForArticleLayout) {
-        grid-template-columns: $grid_formula--article-left-wrapped;
-    }
-    grid-column: full-start / overmain-end;
-}
-.block-right {
-    @extend %grid_layout-for-markup;
-    @media ($screenForArticleLayout) {
-        grid-template-columns: $grid_formula--article-right-wrapped;
-    }
-    grid-column: overmain-start / full-end;
-}
-*/
-/* ------------------------------------ eof grid */
-/* ------------------------------------ layout screen */
-/*
-```html
     <section class="fullscreen">
-        <header class="fullscreen-top"></header>
-        <section class="fullscreen-body"></section>
-        <footer class="fullscreen-bottom"></footer>
+        <header class="fullscreen-header"></header>
+        <div    class="fullscreen-body"  ></div>
+        <footer class="fullscreen-footer"></footer>
     </section>
+
 ```
 */
 .fullscreen {
@@ -594,26 +621,27 @@ button {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center; }
-  .fullscreen .fullscreen-top {
+  .fullscreen .fullscreen-header {
     order: 1;
     flex-grow: 0; }
   .fullscreen .fullscreen-body {
     order: 2;
     flex-grow: 2; }
-  .fullscreen .fullscreen-bottom {
+  .fullscreen .fullscreen-footer {
     order: 3;
     flex-grow: 0; }
   .fullscreen .fullscreen-body,
-  .fullscreen .fullscreen-bottom {
+  .fullscreen .fullscreen-footer {
     display: flex;
     justify-content: center;
     align-items: center;
     align-content: center; }
 
-/* */
+/*  */
 /* ==============================================================
  # Sidebars & Friends
 ============================================================== */
+/* 2018.5.12 */
 .sidebar {
   position: fixed;
   z-index: 3;
@@ -634,21 +662,6 @@ button {
 
 /**/
 /* EOF: Sidebars */
-.design-template .fullscreen {
-  background-image: url(../../art/design-template/bg-light.jpg); }
-
-.design-sg {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500; }
-  .design-sg .logo-matrix {
-    background-color: #5b7d8f;
-    color: white; }
-    .design-sg .logo-matrix .card.menu {
-      background-color: transparent; }
-      .design-sg .logo-matrix .card.menu .card-text {
-        font-size: inherit;
-        color: inherit; }
-
 /* grid with cards */
 /* 2018.11.27 */
 /*
@@ -738,15 +751,16 @@ Fixed rows and side scroll
       overflow: hidden; } }
 
 /* eof */
-/* design template */
+/* logo-matrix */
 .design-template {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
   /* logo-matrix */
+  /**/
+  /* sgSND integration */
   /**/ }
   .design-template .logo-matrix {
     grid-gap: 1px;
     background-color: #5b7d8f;
+    font-family: sans-serif;
     font-size: 1rem;
     line-height: 1.6; }
     .design-template .logo-matrix .card {
@@ -760,8 +774,8 @@ Fixed rows and side scroll
       border-bottom: 1px solid #8cded2;
       padding-right: 0.2em;
       font-weight: 600;
-      font-size: 1.4em;
-      line-height: 1.6rem; }
+      font-size: 1.2em;
+      line-height: 1; }
     .design-template .logo-matrix::-webkit-scrollbar {
       height: 2.4rem; }
     .design-template .logo-matrix::-webkit-scrollbar-track {
@@ -769,57 +783,142 @@ Fixed rows and side scroll
     .design-template .logo-matrix::-webkit-scrollbar-thumb {
       background-color: #8cded2;
       outline: 1px solid #8cded2; }
+  .design-template .logo-matrix a {
+    text-decoration: none; }
+  .design-template .logo-matrix .card {
+    border-radius: 0;
+    border: 0;
+    font-size: 12px;
+    line-height: 20px; }
+  .design-template .logo-matrix .card-text {
+    padding: 10px 24px 10px 16px;
+    clip-path: polygon(0 -1px, calc( 100% - 24px ) -1px, 100% 50%, calc( 100% - 24px ) 100%, 0 100%); }
+  .design-template .logo-matrix .card-text-content {
+    max-height: 72px;
+    overflow: hidden; }
+  .design-template .logo-matrix .card-picture {
+    width: 10em;
+    padding: 10px 16px; }
+  .design-template .logo-matrix .card {
+    position: relative;
+    z-index: 0; }
+  .design-template .logo-matrix .card-clickable a {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0; }
+    .design-template .logo-matrix .card-clickable a span {
+      display: block;
+      text-indent: 100%;
+      white-space: nowrap;
+      overflow: hidden; }
+  .design-template .logo-matrix.has-three-rows {
+    grid-template-columns: min-content;
+    grid-template-rows: 1fr 1fr 1fr; }
+  .design-template .logo-matrix .insert-page,
+  .design-template .logo-matrix .card {
+    height: 100%; }
+  .design-template .logo-matrix [link], .design-template .logo-matrix [name] {
+    display: inline-block;
+    border-bottom: 1px solid #8cded2;
+    padding-right: 0.2em;
+    font-weight: 600;
+    font-size: 1.2em;
+    line-height: 1; }
 
-.design-gl .fullscreen {
-  background-image: url(https://test.gaminglicensing.com/images/main-bg.jpg);
-  font-family: Myriadpro, sans-serif; }
-  .design-gl .fullscreen h1 {
-    font-size: 1.5em;
-    margin: -0.4rem 0; }
-  .design-gl .fullscreen h2 {
-    font-size: 1.5em;
-    margin: -0.4rem 0; }
-  .design-gl .fullscreen a {
-    color: #00b0f0;
-    text-decoration: underline; }
-  .design-gl .fullscreen em {
-    color: #78c2dd;
-    font-style: normal; }
-.design-gl .welcome-item, .design-gl .welcome-links, .design-gl .welcome-form {
-  background-color: rgba(14, 20, 47, 0.7);
-  color: white; }
-.design-gl .welcome-links {
-  padding: 4.8rem 3.6rem; }
-.design-gl .button {
-  background-color: #00b0f0;
-  color: white; }
-.design-gl input:focus + label,
-.design-gl textarea:focus + label {
-  color: #00658a; }
-
-/* ==============================================================
- # Describe HTML & BODY
-============================================================== */
-/* ------------------------------------ body box model */
-.screen {
-  min-height: 100%;
-  margin-top: 0;
-  margin-bottom: 0;
-  display: flex;
-  flex-direction: column; }
-
-.screen-header {
-  position: sticky;
-  top: 0;
-  background-color: white; }
-
-.screen-footer {
-  margin-top: auto; }
-
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-  html {
+/* grid with logos */
+/* 2018.11.30 */
+.logo-selector {
+  display: grid;
+  grid-template-rows: min-content;
+  grid-auto-flow: row;
+  grid-gap: 1px;
+  padding: 1px;
+  margin: 2.4rem;
+  grid-template-columns: repeat(7, 1fr);
+  background-color: #f1bcbb; }
+  .logo-selector .cProviderLogo {
+    background-color: #fff; }
+  .logo-selector .card {
+    background-color: white;
+    border-radius: 0;
+    border: 0px solid transparent;
+    font-size: 10px;
+    grid-column: auto;
     display: flex;
-    flex-direction: column; } }
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: stretch;
+    align-content: stretch; }
+  .logo-selector .card-picture {
+    padding: 0.8em 2.4em;
+    padding-top: 1.6em;
+    flex-grow: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center; }
+    .logo-selector .card-picture * {
+      font-size: 1.6em;
+      line-height: 1; }
+    .logo-selector .card-picture img {
+      max-height: 42px; }
+  .logo-selector .card-label {
+    padding: 0.8em;
+    flex-grow: 0;
+    color: #a8dcd9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center; }
+    .logo-selector .card-label * {
+      font-size: 1.2em;
+      line-height: 1; }
+  .logo-selector .card.is-active {
+    z-index: 1;
+    transform: scale(1.1);
+    outline: 1px solid #f1bcbb;
+    box-shadow: 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.15); }
+    .logo-selector .card.is-active .card-label {
+      background-color: #f1bcbb;
+      color: black; }
+      .logo-selector .card.is-active .card-label:before {
+        content: '';
+        display: block;
+        width: 0.8em;
+        height: 0.8em;
+        border: 2px solid white;
+        border-radius: 50%;
+        margin-right: 0.4em;
+        background-color: firebrick; }
+  .logo-selector .card {
+    transition: none;
+    transform-origin: center center; }
+  .logo-selector .card:hover {
+    z-index: 2;
+    transform: scale(1.1);
+    transition: transform 200ms ease-out;
+    outline: 1px solid #f1bcbb;
+    box-shadow: 0.5rem 0.5rem 0 rgba(0, 0, 0, 0.15); }
+    .logo-selector .card:hover .card-label {
+      color: black; }
+  .logo-selector .card {
+    position: relative;
+    z-index: 0; }
+  .logo-selector .card-clickable a {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0; }
+    .logo-selector .card-clickable a span {
+      display: block;
+      text-indent: 100%;
+      white-space: nowrap;
+      overflow: hidden; }
 
-/* */
-/* EOF: layout-screen */
+.design-template .fullscreen {
+  background-image: url(../../art/design-template/bg-light.jpg); }
