--- a/appDev/app6K/app/style/app_components/layout-body-wrap/layout-body-wrap.scss
+++ b/appDev/app6K/app/style/app_components/layout-body-wrap/layout-body-wrap.scss
@@ -8,23 +8,20 @@
 
 $color_main_back: $color_main_back; // white
 
-
-/* ------------------------------------ body box model */
-
-.screen {
+.body-wrap {
     min-height: 100%;
     margin-top: 0;
     margin-bottom: 0;
     display: flex;
     flex-direction: column;
 }
-.screen-header {
+.body-wrap-header {
+    background-color: $color_main_back;
     position: sticky;
     top: 0;
-    background-color: $color_main_back;
 }
-.screen-footer {
+.body-wrap-footer {
     margin-top: auto;
 }
 
-/* EOF: layout-screen */
+/* */
