--- a/appDev/app6K/app/style/app_core/02-reset-html.scss
+++ b/appDev/app6K/app/style/app_core/02-reset-html.scss
@@ -1,5 +1,5 @@
 /* html base css 1004 */
-/* 2018.11.27 */
+/* 2018.12.5 */
 
 
 /* ------------------------------------ required box model */
@@ -51,6 +51,10 @@ template, [hidden]
     { display: none; }
 summary
     { display: list-item; }
+ul, ol {
+    padding-left: 0;
+    margin-left: 2rem;
+}
 nav ul, nav ol {
     padding: 0;
     margin: 0;
