--- a/appDev/app6K/app/style/app_components/sidebar/sidebar.scss
+++ b/appDev/app6K/app/style/app_components/sidebar/sidebar.scss
@@ -5,7 +5,7 @@
 
 //* ------------------------------------ required
 
-$z-index-sidebar: $z-index-sidebar; // 2
+$z-index-sidebar: 3;
 
 //* ------------------------------------ settings
 
