--- a/appDev/app6K/app/style/app_core/00-construct.scss
+++ b/appDev/app6K/app/style/app_core/00-construct.scss
@@ -15,6 +15,7 @@
     align-content: center;
 }
 @mixin has-illustrated-background {
+    /* has illustrated background */
     background-size:     cover;
     background-repeat:   no-repeat;
     background-position: center center;
