--- a/appDev/app6K/app/style/app_components/content-markup/design-template.scss
+++ b/appDev/app6K/app/style/app_components/content-markup/design-template.scss
@@ -7,7 +7,10 @@
 $dim: $dim; // 0.8rem;
 $margin-less: $margin-less; // 2*$dim;
 
-
+$screenForM: $screenForM; // max-width: 1400px
+$screenForS: $screenForS; // max-width: 1300px
+$screenForTablet: $screenForTablet; // max-width: 900px
+$screenNotTablet: $screenNotTablet; // min-width: 901px
 
 //* ------------------------------------ settings
 
@@ -21,9 +24,15 @@ $font-list-for-design-template:
     "Book Antiqua",
     Georgia,
     serif;
+$font-list-for-content-table:
+    "Trebuchet MS",
+    "Gill Sans",
+    "Gill Sans MT",
+    sans-serif;
 
 $color_main_back:      hsl(60, 100%, 98.6%);
 $color_main_front:     hsl(0, 0%, 6.7%);
+
 
 //* ------------------------------------ constructor
 
@@ -47,10 +56,15 @@ body {
     background-color:     $color_main_back;
     color:                $color_main_front;
     font-family:          $font-list-for-design-template;
+
+    /* default font */
     font-weight: 400;
     font-size:   1.6rem;
     line-height: 1.5;
 }
+@media screen and ($screenForM)      { body { font-size: 1.5rem; } }
+@media screen and ($screenForS)      { body { font-size: 1.4rem; } }
+@media screen and ($screenForTablet) { body { font-size: 1.6rem; } }
 
 
 //* ------------------------------------ app interface design
@@ -75,7 +89,7 @@ body {
     }
     h1, .big-title {
         font-weight: 400;
-        font-size:   4rem;
+        font-size:   2.5em;
         line-height: 1.2;
     }
     h2, .title {
@@ -83,29 +97,41 @@ body {
 
         font-style:  italic;
         font-weight: 400;
-        font-size:   3.2rem;
+        font-size:   2em;
         line-height: 1.25;
     }
-    h3 {
+    h3, .min-title {
         font-style:  italic;
         font-weight: 400;
-        font-size:   2.4rem;
+        font-size:   1.5em;
         line-height: 1;
     }
     .subtitle {
         font-style:  normal;
+        font-size: 1.125em;
+        line-height: 1.33333;
+        margin-top: 0;
     }
     .text-accent {
         font-weight: 400;
-        font-size:   2.4rem;
+        font-size:   1.5em;
         line-height: 1.5;
     }
     .box {
-        /* has visualy equal paddings */
-        padding-top:    $margin-less;
-        padding-bottom: $margin-less;
+        @media screen and ($screenNotTablet) {
+            /* has visualy equal paddings */
+            padding-top:    $margin-less;
+            padding-bottom: $margin-less;
+        }
     }
     .aside {
-        font-size: 0.8em;
+        font-size: 0.875em;
+    }
+    table {
+        td {
+            font-family: $font-list-for-content-table;
+            letter-spacing: .03em;
+            font-size: 0.875em;
+        }
     }
 }
