font-size-is-ok

--- a/appDev/app6K/app/style/app_components/grid-for-article/grid-for-article.scss
+++ b/appDev/app6K/app/style/app_components/grid-for-article/grid-for-article.scss
@@ -14,8 +14,8 @@ $screenForTablet: $screenForTablet;
 //* ------------------------------------ setup
 
 
-$grid-settings--main-maximum: 64rem;
-$grid-settings--aside:        26rem;
+$grid-settings--main-maximum: 40em;
+$grid-settings--aside:        16em;
 
 $screenForArticleLayout: $screenNotTablet;
 $screenNotArticleLayout: $screenForTablet;
