--- a/appDev/app6K/app/style/app_core/02-reset-html.scss
+++ b/appDev/app6K/app/style/app_core/02-reset-html.scss
@@ -14,7 +14,7 @@ html, body               { margin: 0; padding: 0;  }
 
 
 html { font-size: 10px; }
-body { font-size: 1.6rem; line-height: 1.5; }
+body { font-size: 16px; line-height: 1.5; }
 
 
 /* ------------------------------------ improve design & UX */
