--- a/appDev/app6K/app/style/app.css
+++ b/appDev/app6K/app/style/app.css
@@ -9,83 +9,67 @@
 /* 2018.12.5 */
 /* ------------------------------------ minimal box model */
 *, *:before, *:after {
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 html {
   box-sizing: border-box;
-  height: 100%;
-}
+  height: 100%; }
 
 html, body {
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 /* ------------------------------------ unit & font sizes */
 html {
-  font-size: 10px;
-}
+  font-size: 10px; }
 
 body {
-  font-size: 1.6rem;
-  line-height: 1.5;
-}
+  font-size: 16px;
+  line-height: 1.5; }
 
 /* ------------------------------------ improve design & UX */
 html {
-  cursor: default;
-}
+  cursor: default; }
 
 body {
-  overflow-y: scroll;
-}
+  overflow-y: scroll; }
 
 canvas {
-  display: inline-block;
-}
+  display: inline-block; }
 
 html {
   -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
+  -webkit-text-size-adjust: 100%; }
 
 body {
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-}
+  -webkit-font-smoothing: antialiased; }
 
 a, area, button, input, label, select, summary, textarea, [tabindex] {
   -ms-touch-action: manipulation;
-  touch-action: manipulation;
-}
+  touch-action: manipulation; }
 
 /* ----------------- use semantic markup without standart design */
 article, section, header, footer, main, aside, nav, details {
-  display: block;
-}
+  display: block; }
 
 [hidden] {
-  display: none !important;
-}
+  display: none !important; }
 
 summary {
-  display: list-item;
-}
+  display: list-item; }
 
 nav ul, nav ol {
   padding: 0;
   margin: 0;
-  list-style-type: none;
-}
+  list-style-type: none; }
 
 figure, figcaption, fieldset, legend {
   display: block;
   margin: 0;
   padding: 0;
   border: 0;
-  white-space: normal;
-}
+  white-space: normal; }
 
 /* ------------------------------------ EOF: html base */
 /* ==============================================================
@@ -97,200 +81,136 @@ figure, figcaption, fieldset, legend {
   margin-top: 0;
   margin-bottom: 0;
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 .body-wrap-header {
   background-color: white;
   position: sticky;
-  top: 0;
-}
+  top: 0; }
 
 .body-wrap-footer {
-  margin-top: auto;
-}
+  margin-top: auto; }
 
 /* */
 /* grid for article layout (main+aside+extra) */
 /* 2018.12.5 */
-.grid, .grid-for-article, .right-wrap-in-grid, .left-wrap-in-grid, .block, .grid-for-markup {
+.grid-for-markup, .block, .left-wrap-in-grid, .right-wrap-in-grid, .grid-for-article, .grid {
   display: grid;
   grid-auto-rows: min-content;
   grid-auto-flow: row;
   grid-template-columns:  [full-start merge-start overmain-start main-start aside-start]  auto  [full-end merge-end overmain-end main-end aside-end] ;
   align-items: start;
-  grid-gap: 1.6rem 0;
-}
+  grid-gap: 1.5em 0; }
 
-.right-wrap-in-grid, .left-wrap-in-grid, .block, .grid-for-markup {
-  grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ;
-}
+.grid-for-markup, .block, .left-wrap-in-grid, .right-wrap-in-grid {
+  grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ; }
 
 @media (max-width: 900px) {
-  .grid, .grid-for-article {
-    grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ;
-  }
-}
+  .grid-for-article, .grid {
+    grid-template-columns:  [full-start merge-start overmain-start]  2.4rem  [main-start aside-start]  auto  [main-end aside-end]  2.4rem  [full-end merge-end overmain-end] ; } }
 @media (min-width: 901px) {
-  .grid, .grid-for-article {
-    grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 40em)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  16em  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ;
-  }
-}
+  .grid-for-article, .grid {
+    grid-template-columns:  [full-start]  minmax(0, 1fr)  [merge-start overmain-start]  2.4rem  [main-start]  minmax(0, 38em)  [main-end]  2.4rem  [overmain-end]  2.4rem  [aside-start]  16em  [aside-end]  2.4rem  [merge-end]  minmax(0, 1fr)  [full-end] ; } }
 
 .grid-for-markup > * {
-  grid-column: main;
-  margin-top: 0;
-  margin-bottom: 0;
-}
+  grid-column: main; }
 .grid-for-markup > .layer {
-  grid-column: full;
-}
+  grid-column: full; }
 .grid-for-markup > .block {
-  grid-column: overmain;
-}
+  grid-column: overmain; }
 .grid-for-markup > .aside {
-  grid-column: aside;
-}
+  grid-column: aside; }
 .grid-for-markup > .merge {
-  grid-column: merge;
-}
+  grid-column: merge; }
 .grid-for-markup > .illustration {
-  grid-column: overmain;
-}
+  grid-column: overmain; }
 
 .grid-for-article > * {
-  grid-column: main;
-  margin-top: 0;
-  margin-bottom: 0;
-}
+  grid-column: main; }
 .grid-for-article > .layer {
-  grid-column: full;
-}
+  grid-column: full; }
 .grid-for-article > .block {
-  grid-column: overmain;
-}
+  grid-column: overmain; }
 .grid-for-article > .aside {
-  grid-column: aside;
-}
+  grid-column: aside; }
 .grid-for-article > .merge {
-  grid-column: merge;
-}
+  grid-column: merge; }
 .grid-for-article > .illustration {
-  grid-column: overmain;
-}
+  grid-column: overmain; }
 
 .grid > * {
-  grid-column: main;
-  margin-top: 0;
-  margin-bottom: 0;
-}
+  grid-column: main; }
 .grid > .layer {
-  grid-column: full;
-}
+  grid-column: full; }
 .grid > .block {
-  grid-column: overmain;
-}
+  grid-column: overmain; }
 .grid > .aside {
-  grid-column: aside;
-}
+  grid-column: aside; }
 .grid > .merge {
-  grid-column: merge;
-}
+  grid-column: merge; }
 .grid > .illustration {
-  grid-column: overmain;
-}
+  grid-column: overmain; }
 
 .block > * {
-  grid-column: main;
-  margin-top: 0;
-  margin-bottom: 0;
-}
+  grid-column: main; }
 .block > .layer {
-  grid-column: full;
-}
+  grid-column: full; }
 .block > .block {
-  grid-column: overmain;
-}
+  grid-column: overmain; }
 .block > .aside {
-  grid-column: aside;
-}
+  grid-column: aside; }
 .block > .merge {
-  grid-column: merge;
-}
+  grid-column: merge; }
 .block > .illustration {
-  grid-column: overmain;
-}
+  grid-column: overmain; }
 
 @media (min-width: 901px) {
   .aside.has-block {
     height: 0;
     overflow: visible;
     margin-left: -2.4rem;
-    margin-right: -2.4rem;
-  }
-}
+    margin-right: -2.4rem; } }
 
 .left-wrap-in-grid {
-  grid-column: full-start/overmain-end;
-}
-.left-wrap-in-grid > * {
-  grid-column: main;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.left-wrap-in-grid > .layer {
-  grid-column: full;
-}
-.left-wrap-in-grid > .block {
-  grid-column: overmain;
-}
-.left-wrap-in-grid > .aside {
-  grid-column: aside;
-}
-.left-wrap-in-grid > .merge {
-  grid-column: merge;
-}
-.left-wrap-in-grid > .illustration {
-  grid-column: overmain;
-}
+  grid-column: full-start / overmain-end; }
+  .left-wrap-in-grid > * {
+    grid-column: main; }
+  .left-wrap-in-grid > .layer {
+    grid-column: full; }
+  .left-wrap-in-grid > .block {
+    grid-column: overmain; }
+  .left-wrap-in-grid > .aside {
+    grid-column: aside; }
+  .left-wrap-in-grid > .merge {
+    grid-column: merge; }
+  .left-wrap-in-grid > .illustration {
+    grid-column: overmain; }
 
 .right-wrap-in-grid {
-  grid-column: overmain-start/full-end;
-}
-.right-wrap-in-grid > * {
-  grid-column: main;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-.right-wrap-in-grid > .layer {
-  grid-column: full;
-}
-.right-wrap-in-grid > .block {
-  grid-column: overmain;
-}
-.right-wrap-in-grid > .aside {
-  grid-column: aside;
-}
-.right-wrap-in-grid > .merge {
-  grid-column: merge;
-}
-.right-wrap-in-grid > .illustration {
-  grid-column: overmain;
-}
+  grid-column: overmain-start / full-end; }
+  .right-wrap-in-grid > * {
+    grid-column: main; }
+  .right-wrap-in-grid > .layer {
+    grid-column: full; }
+  .right-wrap-in-grid > .block {
+    grid-column: overmain; }
+  .right-wrap-in-grid > .aside {
+    grid-column: aside; }
+  .right-wrap-in-grid > .merge {
+    grid-column: merge; }
+  .right-wrap-in-grid > .illustration {
+    grid-column: overmain; }
 
 /**/
 .has-two-columns {
   display: grid;
   grid-template-columns: auto auto;
-  grid-gap: 2.4rem;
-}
-.has-two-columns > * {
-  grid-column: auto;
-}
+  grid-gap: 2.4rem; }
+  .has-two-columns > * {
+    grid-column: auto; }
 
 .has-two-columns > .block {
-  grid-column: auto;
-}
+  grid-column: auto; }
 
 /**/
 /* eof grid for article */
@@ -299,100 +219,94 @@ figure, figcaption, fieldset, legend {
 h1, .big-title {
   font-size: 2.5em;
   line-height: 1.2;
-  margin: 0;
-}
+  margin: 0; }
 
 h2, .title {
   font-size: 2em;
   line-height: 1.25;
-  margin: 0;
-}
+  margin: 0; }
 
 h3, .min-title {
   font-size: 1.5em;
   line-height: 1;
-  margin: 0;
-}
+  margin: 0; }
 
 h4 {
   font-size: inherit;
   line-height: inherit;
-  margin: 0;
-}
+  margin: 0; }
 
 h5 {
   font-size: inherit;
   line-height: inherit;
-  margin: 0;
-}
+  margin: 0; }
 
 h6 {
   font-size: inherit;
   line-height: inherit;
-  margin: 0;
-}
+  margin: 0; }
 
 .subtitle {
+  margin-top: 0;
   font-style: italic;
   font-size: 1.125em;
-  line-height: 1.33333;
-  margin-top: 0;
-}
+  line-height: 1.333333; }
 
 p {
-  margin: 0;
-}
+  margin: 0; }
 
 a {
   background-color: transparent;
   color: inherit;
-  text-decoration: underline;
-}
+  text-decoration: underline; }
 
 ul {
+  margin: 0;
   padding-left: 0;
-  margin-left: 2rem;
-}
+  margin-left: 1.5em; }
 
 ol {
+  margin: 0;
   padding-left: 0;
-  margin-left: 2rem;
-}
+  margin-left: 1.5em; }
 
 hr {
-  display: block;
-  min-height: 3.2rem;
+  font-size: inherit;
   border: 0;
   background: transparent;
   box-shadow: none;
-}
+  /* use as visual spacer */
+  display: block;
+  min-height: 2em; }
 
 img {
   display: block;
   border: none;
-  max-width: 100%;
-}
+  max-width: 100%; }
 
 svg {
   display: block;
   border: none;
-  max-width: 100%;
-}
+  max-width: 100%; }
 
 table th {
-  text-align: left;
-}
+  text-align: left; }
 table td {
   padding-top: 0.8rem;
   padding-bottom: 0.8rem;
   font-family: sans-serif;
-  font-size: 0.8em;
-}
+  font-size: 0.875em;
+  line-height: 2; }
+
+figure,
+figcaption,
+blockquote {
+  margin: 0;
+  padding: 0; }
 
 .is-centered {
   text-align: center;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .box {
   /* has paddings */
@@ -401,126 +315,115 @@ table td {
   /* has illustrated background */
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
-}
+  background-position: center center; }
 
 .bg, [bg] {
-  background-color: rgba(0, 0, 0, 0.1);
-}
+  background-color: rgba(0, 0, 0, 0.1); }
 
-.form-submit, .form-textarea, .form-item {
+.form-item, .form-textarea, .form-submit {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: stretch;
-  align-content: center;
-}
-.form-submit > *, .form-textarea > *, .form-item > * {
-  order: 3;
-}
-.form-submit > label, .form-textarea > label, .form-item > label {
-  order: 1;
-}
-.form-submit > input, .form-textarea > input, .form-item > input {
-  order: 2;
-}
+  align-content: center; }
+  .form-item > *, .form-textarea > *, .form-submit > * {
+    order: 3; }
+  .form-item > label, .form-textarea > label, .form-submit > label {
+    order: 1; }
+  .form-item > input, .form-textarea > input, .form-submit > input {
+    order: 2; }
 
 label {
-  display: block;
-}
+  display: block; }
 
 input {
   display: block;
   width: 100%;
-  padding: 0.25em 1em;
-}
+  padding: 0.25em 1em; }
 
 textarea {
   display: block;
   width: 100%;
   padding: 1em;
-  resize: vertical;
-}
+  resize: vertical; }
 
 button {
-  padding: 0.25em 1em;
-}
+  padding: 0.25em 1em; }
 
 /**/
 /* eof styles for content */
 /* content markup */
 /* 2018.12.5 */
+html {
+  font-size: 20px; }
+
 body {
   background-color: #fffff8;
   color: #111111;
   font-family: Vollkorn, et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
   /* default font */
   font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 1.5;
-}
+  font-size: 16px;
+  line-height: 1.75; }
 
-@supports (hanging-punctuation: first) {
-  .design-template * {
-    hanging-punctuation: first;
-  }
-}
-.design-template h1, .design-template h2, .design-template h3, .design-template h4, .design-template h5, .design-template h6 {
-  font-family: inherit;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  -ms-word-break: break-all;
-  word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-.design-template h1, .design-template .big-title {
-  font-weight: 400;
-  font-size: 2.5em;
-  line-height: 1.2;
-}
-.design-template h2, .design-template .title {
-  padding-top: 0.8rem;
-  font-style: italic;
-  font-weight: 400;
-  font-size: 2em;
-  line-height: 1.25;
-}
-.design-template h3, .design-template .min-title {
-  font-style: italic;
-  font-weight: 400;
-  font-size: 1.5em;
-  line-height: 1;
-}
-.design-template .subtitle {
-  font-style: normal;
-  font-size: 1.125em;
-  line-height: 1.33333;
-  margin-top: 0;
-}
-.design-template .text-accent {
-  font-weight: 400;
-  font-size: 1.5em;
-  line-height: 1.5;
-}
-@media screen and (min-width: 901px) {
-  .design-template .box {
-    /* has visualy equal paddings */
-    padding-top: 1.6rem;
-    padding-bottom: 1.6rem;
-  }
-}
-.design-template .aside {
-  font-size: 0.875em;
-}
-.design-template table td {
-  font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif;
-  letter-spacing: 0.03em;
-  font-size: 0.875em;
-}
+.design-template {
+  /* design workers */ }
+  @supports (hanging-punctuation: first) {
+    .design-template * {
+      hanging-punctuation: first; } }
+  .design-template h1, .design-template h2, .design-template h3, .design-template h4, .design-template h5, .design-template h6 {
+    font-family: inherit;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; }
+  .design-template h1, .design-template .big-title {
+    font-weight: 400;
+    font-size: 2.5em;
+    line-height: 1.2; }
+  .design-template h2, .design-template .title {
+    padding-top: 0.8rem;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 2em;
+    line-height: 1.25; }
+  .design-template h3, .design-template .min-title {
+    font-style: italic;
+    font-weight: 400;
+    font-size: 1.5em;
+    line-height: 1; }
+  .design-template .subtitle {
+    font-style: normal;
+    font-size: 1.125em;
+    line-height: 1.333333; }
+  .design-template .text-accent {
+    font-weight: 400;
+    font-size: 1.5em;
+    line-height: 1.5; }
+  .design-template .aside {
+    font-size: 0.875em;
+    line-height: 1.714285; }
+  .design-template small {
+    font-size: 0.875em;
+    line-height: 2; }
+  @media screen and (min-width: 901px) {
+    .design-template .box {
+      /* has visualy equal paddings */
+      padding-top: 2rem;
+      padding-bottom: 2rem; } }
+  .design-template table td {
+    /* small sans */
+    font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif;
+    letter-spacing: .03em;
+    font-size: 0.875em;
+    line-height: 1.714285; }
+  .design-template .has-sans {
+    font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
 
 /* split fullscreen into parts header/body/footer */
 /* 2018.12.5
@@ -545,39 +448,33 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-content: stretch;
-  align-items: stretch;
-}
-.fullscreen.has-fixed-background:before {
-  position: fixed;
-  z-index: -1;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  pointer-events: none;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-.fullscreen .fullscreen-header {
-  order: 1;
-  flex-grow: 0;
-}
-.fullscreen .fullscreen-body {
-  order: 2;
-  flex-grow: 2;
-}
-.fullscreen .fullscreen-footer {
-  order: 3;
-  flex-grow: 0;
-}
-.fullscreen .fullscreen-body,
-.fullscreen .fullscreen-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-}
+  align-items: stretch; }
+  .fullscreen.has-fixed-background:before {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center; }
+  .fullscreen .fullscreen-header {
+    order: 1;
+    flex-grow: 0; }
+  .fullscreen .fullscreen-body {
+    order: 2;
+    flex-grow: 2; }
+  .fullscreen .fullscreen-footer {
+    order: 3;
+    flex-grow: 0; }
+  .fullscreen .fullscreen-body,
+  .fullscreen .fullscreen-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center; }
 
 /*  */
 /* ==============================================================
@@ -594,17 +491,13 @@ body {
   overflow: auto;
   transform: translateX(0);
   transition: transform 200ms ease-in;
-  background-color: #fffff8;
-}
-@media screen and (min-width: 44rem) {
-  .sidebar {
-    max-width: 38rem;
-  }
-}
-.sidebar.is-active {
-  transition-timing-function: ease-out;
-  transform: translateX(-100%);
-}
+  background-color: #fffff8; }
+  @media screen and (min-width: 44rem) {
+    .sidebar {
+      max-width: 38rem; } }
+  .sidebar.is-active {
+    transition-timing-function: ease-out;
+    transform: translateX(-100%); }
 
 /**/
 /* EOF: Sidebars */
