--- a/appDev/app6K/app/style/app_components/content-markup/design-template.scss
+++ b/appDev/app6K/app/style/app_components/content-markup/design-template.scss
@@ -48,7 +48,7 @@ $color_main_front:     hsl(0, 0%, 6.7%);
 
 //* ------------------------------------ body design
 
-
+html { font-size: 20px; }
 body {
     background-color:     $color_main_back;
     color:                $color_main_front;
@@ -56,8 +56,8 @@ body {
 
     /* default font */
     font-weight: 400;
-    font-size:   1.6rem;
-    line-height: 1.5;
+    font-size:   16px;
+    line-height: 1.75;
 }
 
 
@@ -102,14 +102,21 @@ body {
     }
     .subtitle {
         font-style:  normal;
-        font-size: 1.125em;
-        line-height: 1.33333;
-        margin-top: 0;
+        font-size:   1.125em;
+        line-height: 1.333333;
     }
     .text-accent {
         font-weight: 400;
         font-size:   1.5em;
         line-height: 1.5;
+    }
+    .aside {
+        font-size:   0.875em;
+        line-height: 1.714285;
+    }
+    small {
+        font-size: 0.875em;
+        line-height: 2;
     }
     .box {
         @media screen and ($screenNotTablet) {
@@ -118,14 +125,19 @@ body {
             padding-bottom: $margin-less;
         }
     }
-    .aside {
-        font-size: 0.875em;
-    }
     table {
         td {
+            /* small sans */
             font-family: $font-list-for-content-table;
             letter-spacing: .03em;
-            font-size: 0.875em;
+            font-size:    0.875em;
+            line-height: 1.714285;
         }
+    }
+
+    /* design workers */
+
+    .has-sans {
+        font-family: $font-list-for-content-table;
     }
 }
